--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "start:dev": "npx nodemon",
     "build": "npx tsc src/index.ts",
     "test": "npx jest",
-    "prettier": "prettier . --write"
+    "prettier": "prettier . --write",
+    "lint": "eslint .",
+    "prepare": "husky"
   },
   "bin": {
     "weather-cli": "./dist/index.js"
@@ -14,15 +16,18 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.2",
     "eslint": "^9.17.0",
+    "eslint-config-eslint": "^11.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.2"
   },
   "dependencies": {
     "@types/commander": "^2.12.0",
