--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "include": ["./src/**/*"],
-  "exclude": ["./node_modules", "./dist"],
+  "exclude": ["./node_modules", "./dist", "eslint.config.mjs", "jest.config.js"],
   "compilerOptions": {
     "target": "ES2015",
     "module": "commonjs",
