--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,12 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
 
+      - name: Cache node modules
+        uses: actions/cache@v4
+        with:
+          path: "node_modules"
+          key: ${{runner.os}}-node-${{hashFiles('**/package-lock.json')}}
+
       - name: Install dependencies
         run: npm i
 
@@ -24,11 +30,11 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-
-      - name: Install dependencies
-        run: npm i
+      - name: Restore cache node modules
+        uses: actions/cache@v4
+        with:
+          path: "node_modules"
+          key: ${{runner.os}}-node-${{hashFiles('**/package-lock.json')}}
 
       - name: Test
         run: npm run test
