--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ run-name: ${{github.actor}} is started jog
 on: [push]
 
 jobs:
-  build:
+  install-packages:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -14,6 +14,19 @@ jobs:
 
       - name: Install dependencies
         run: npm i
+
+      - name: Cache node modules
+        uses: actions/cache@v4
+        with:
+          path: "node_modules"
+          key: ${{runner.os}}-node-${{hashFiles('**/package-lock.json')}}
+
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
 
       - name: Cache node modules
         uses: actions/cache@v4
