--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: install-packages
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -39,6 +40,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: install-packages
     steps:
       - name: Check out code
         uses: actions/checkout@v4
