--- a/src/db/tasks.db.json
+++ b/src/db/tasks.db.json
@@ -1,1 +1,1 @@
-[{"title":"Spec task title","id":1},{"title":"Second spec task title","id":2}]
+[{"title":"Updated task title","id":1},{"title":"Second spec task title","id":2}]
