--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           path: "node_modules"
           key: ${{runner.os}}-node-${{hashFiles('**/package-lock.json')}}
 
-      - name: Test
+      - name: Build
         run: npm run build
 
   test:
